k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: routing-experiment
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: go-app
            port:
              number: 80
      - path: /version
        pathType: Exact
        backend:
          service:
            name: go-app
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app
            port:
              number: 80
